Added images to portfolio

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ keywords:
 # Author settings
 author:
     name:             Alessandra Gherardelli
-    facebook:         alexgherardelli
+    # facebook:         alexgherardelli
     # twitter:          your-id
     github:           AlexGherardelli
     linkedin:         alessandragherardelli
