--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 permalink: /:day/:month/:year/:title/
 
 # SEO settings
-title: 
+title:
 description: > # this means to ignore newlines until "baseurl:"
   A blog on geeky stuff
-keywords: 
+keywords:
 
 
 # Author settings
@@ -28,10 +28,6 @@ timezone:           Europe/Rome
 
 # Collections settings
 collections:
-    portfolio:
-        # permalink: /projects/:path/
-    projects:
-
-
-
-
+    # portfolio:
+    #     # permalink: /projects/:path/
+    # projects:
