Changed location of sass files

--- a/_config.yml
+++ b/_config.yml
@@ -31,3 +31,7 @@ collections:
     # portfolio:
     #     # permalink: /projects/:path/
     # projects:
+
+sass:
+  sass_dir: css
+  style: compressed
