Continuing doing readibilty experiments

--- a/_config.yml
+++ b/_config.yml
@@ -35,3 +35,10 @@ collections:
 sass:
   sass_dir: css
   style: compressed
+
+markdown: kramdown
+highlighter: rouge
+
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
