--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author:
     # medium:           your-id
     # tumblr:           your-id
     # dribble:          your-id
-    # behance:          your-id
+    behance:          alexgherardelli
     email:           alessandra.gherardelli@gmail.com
 
 # Timezones
