--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,7 @@ author:
     # dribble:          your-id
     # behance:         gherds
     email:           alessandra.gherardelli@gmail.com
-    description:     I bring 8 years of experience in project/product management in the United Nations system.  
-    
-     Currently I work for the World Food Programme (WFP), the leading humanitarian agency fighting hunger in 80+ countries and recipient of the 2020 Nobel Peace Prize.
+    description:     I am a versatile, tech-savvy professional with 8 years of experience in driving communications and information management projects in international organizations. Currently I work for the World Food Programme (WFP), the leading humanitarian agency fighting hunger in 80+ countries and recipient of the 2020 Nobel Peace Prize.
 
 # Timezones
 timezone:           Europe/Rome
