New article on Tableau

--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 permalink: /blog/:year/:month/:title/
 
 # SEO settings
-title:
-description: 
-keywords:
+title: Alessandra Gherardelli | Product & Project manager
+description:  Alessandra Gherardelli is a product/project manager with 8 years of experience in driving communications and information management projects in the United Nations system
+keywords: 
 
 
 # Author settings
