Hid project page. New article

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,8 @@ author:
     # dribble:          your-id
     # behance:         gherds
     email:           alessandra.gherardelli@gmail.com
-    description:     I am a versatile, tech-savvy professional with 8 years of experience in driving communications and information management projects in international organizations. Currently I work for the World Food Programme (WFP), the leading humanitarian agency fighting hunger in 80+ countries and recipient of the 2020 Nobel Peace Prize.
+    description:     I'm a tech-savvy professional with 9+ years of experience driving successful knowledge and information management projects.I currently work for the World Food Programme (WFP), the world's leading humanitarian agency fighting hunger in 80+ countries, and recipient of the 2020 Nobel Peace Prize. In my current role at WFP, I focus in building data-driven products and coordinating capacity development initiatives within the Research, Assessment and Monitoring division.
+
 
 # Timezones
 timezone:           Europe/Rome
